@@ -1,6 +1,6 @@
 AUX pingus-0.7.6-gcc47.patch 1242 SHA256 918dcd8a1c2850af5a6b390d92fc0f4f8670a2e002fc15d01d171bbb97c095e5 SHA512 998aa2c9547fe82775442b8f234d07724642e342d7ccea724726c9210559b1cc8ea5e19d51c7d0bbf61b523cb83fa198596b25e6c6e1ce9882d75d73b9d67f68 WHIRLPOOL ccff5e8ee90a744c15852821a7ca62ea0603ac8fdb81069bb6936254c7d4aaf2b81b4432609c160ebc23ba6e08e5452c90054d092c7a3a6464ff18fc50aeab1e
 AUX pingus-0.7.6-noopengl.patch 388 SHA256 7b21454857240c46ee94e06cd18e80c6ffc390256764dde50d42c699fc942914 SHA512 431226d068ffdadf33cd1b73c86e2e2e43de3def166c42cd0592b58e0025f842f579bafa4532f45acf05f4490189d26c679a4b0bcf4f16818aea307b2efe5eb2 WHIRLPOOL 8b54118d4d226ebead2ffe3ffde119f3bd51b8b5e4b692ebac9d9934f880752825b5883b5a9ad34d1c29879883050204fb651891ba181be6b85c7440c90f7f9a
 DIST pingus-0.7.6.tar.bz2 12622268 SHA256 759c1253075d1e72691bc1e770b24cdd51917041fd1857c1daf85b65a6686460 SHA512 6c8c2ace1a9229b4e3b506aee76aa94c0dd906a64fa2c817902c2cd3854df390cf675c8c6ddd3ba1926a467348b2103818bd44bc095378cc7bf3f2ff7af27188 WHIRLPOOL 2c4bafef86c40fec3fcfc9ff4b298e72919c8309d475aa4aeb4d368927ac611801f416375108091d9f40bdb2703633765125f6f7ea361186f637e2d5234e53e2
-EBUILD pingus-0.7.6.ebuild 1699 SHA256 6ddc5f6057c9b17227bbfa74aa9f8519544a23caf773a7e7ff21093edad53c19 SHA512 7f55f3b86ed5cf65939a1ba67049b842187e7b691c4a66dec2e29b882e981508920b416f317b73e1bdc3832942edcf3baaa2d76fbaaa6049f049b6e820ca1ebf WHIRLPOOL 7a70b7854b56196f7944d98853c2d0a67be08ea9751b4c2001aa458681d83228b77f348df2300c3a946ba960b6598cc4b0e20d0f3b9b7518c903402ec915fa13
-MISC ChangeLog 6480 SHA256 9d2d30d8cf8cd28172186bd85477bf17198cf0755eadcb002a7d9ed84549bdf4 SHA512 2e086a4f893e698e802e55e4f399c45e3a30615967e84a3dcdd42d07608663bf9274d853d75125328b002619180e42727fdb0da487b1b2e725f51a6b3a079ef6 WHIRLPOOL 713ea29a2e9d677877e031fcc18bd26df3c1eaa5dd406a4ec6aeab2fed1dcd2f08d003973cad7a6d2f7bc5f14a408c5a4250c79bfc69431851c3230a27064e8f
-MISC metadata.xml 1111 SHA256 a2b191d59e7491c2b434478e9f683fb533015b5400b9452b15b1ee3a2b36f06a SHA512 f5184dbe8509f635d3537ecb222f66bd1d7961e8f49ddaef69f4250acf5f9f7c068673fdfe4fd9a8e6e7f93c57943f1b1175d430d208a0d7ea1d1b98b4182d72 WHIRLPOOL fb0721928dae535abbcc53dde7944ad92e4d7ae5b7902c00c46f7191bd3df2e1d9e5eba2b113c7ac856118b30fd7a3fa1bebaae3fa0927c53db7eb2f60310b82
+EBUILD pingus-0.7.6.ebuild 1743 SHA256 83cbe498ae0043425af16073120aa25d58db815436856b80974abf01322a671d SHA512 bc69e8e35d1265449731cdc7a79c9cd12478aa0057184607b645be99395b8ab79911b100969e6530e5362ae59149205cda83597f1500878d1ed6ebdea5323bae WHIRLPOOL d1822e99ef3d5552f2e54a1a145bcd7815823630a27c7e56836053a93be332953f45a6f594e792bfca8744c1547851655fdd5f454871dcb504c48d843f2295b3
+MISC ChangeLog 6630 SHA256 80ac9b033cb7c958f1d23099c839a94da0d92a8b83eb0593232f2b669f94de67 SHA512 b6ff9eecf48ce47e453eacf109ecc33e141795aaa6a384f6892187c0d3529acb3ccbead88d9c03ea6dd9e898e87d395dc75c6dcf52dc089a22e778d84ac5180c WHIRLPOOL 5965c1f2687bbcbf582ff3f2eb7daff727c862e00028532262f6028267ba5ba49fa42df5c43ed01357a5f3d85ee9c235a849e1ead5b52412b34fca9e3f7fd4ab
+MISC metadata.xml 1189 SHA256 c02a8d6f3a2a59cba61fa4211958a44bd33939a0bf0f60ee50ec5a281a289735 SHA512 f31248604a926e748dc60847d396d2a0e774e40beaab4db473bc623a174629356dc6ab46b32ba6ea076739c3a211de26499e1f22fdceb18893a0026010992af0 WHIRLPOOL 9eaf792872ae21aedc43341a93ada3d8c42057b46b41b963cb2c48e7c87379afbe4f8a090904a9a6255dce61661405f8ae477baff0d7f68d318b072099ec1e68
