@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pingus/pingus-0.7.6.ebuild,v 1.8 2012/07/09 02:30:02 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/pingus/pingus-0.7.6.ebuild,v 1.9 2012/12/08 07:32:00 mr_bones_ Exp $
 
 EAPI=2
 inherit eutils flag-o-matic scons-utils toolchain-funcs games
@@ -12,11 +12,12 @@ SRC_URI="http://pingus.googlecode.com/files/${P}.tar.bz2"
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="amd64 ppc x86"
-IUSE="opengl"
+IUSE="opengl music"
 
 DEPEND="media-libs/libsdl[joystick,opengl?,video]
 	media-libs/sdl-image[png]
 	media-libs/sdl-mixer
+	music? ( media-libs/sdl-mixer[mod] )
 	opengl? ( virtual/opengl )
 	media-libs/libpng
 	dev-libs/boost"
